--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About BlissBuy</title>
-  <link rel="stylesheet" href="ecommerce.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div id="app">
@@ -25,6 +25,6 @@
     </footer>
   </div>
 
-  <script src="ecommerce.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
